--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
                     <div class="previous">previous</div>
                     <div class="result">RESULT</div>
                 </div>
-                <div class="button multiply">X</div>
-                <div class="button erase">←</div>
-                <div class="button clear">AC</div>
-                <div class="button division">/</div>
-                <div class="button number">1</div>
-                <div class="button number">2</div>
-                <div class="button number">3</div>
-                <div class="button substract">-</div>
-                <div class="button number">4</div>
-                <div class="button number">5</div>
-                <div class="button number">6</div>
-                <div class="button add">+</div>
-                <div class="button number">7</div>
-                <div class="button number">8</div>
-                <div class="button number">9</div>
-                <div class="button number">0</div>
-                <div class="button period">.</div>
-                <div class="button equal">=</div>
+                <button value="*" class="button operator multiply">X</button>
+                <button value="CE" class="button erase">←</button>
+                <button value="AC" class="button clear">AC</button>
+                <button value="/" class="button operator division">/</button>
+                <button value="1" class="button number">1</button>
+                <button value="2" class="button number">2</button>
+                <button value="3" class="button number">3</button>
+                <button value="-" class="button operator substract">-</button>
+                <button value="4" class="button number">4</button>
+                <button value="5" class="button number">5</button>
+                <button value="6" class="button number">6</button>
+                <button value="+" class="button operator add">+</button>
+                <button value="7" class="button number">7</button>
+                <button value="8" class="button number">8</button>
+                <button value="9" class="button number">9</button>
+                <button value="0" class="button number">0</button>
+                <button value="." class="button decimal">.</button>
+                <button value="=" class="button equal">=</button>
             </div>
         </div>
     </div>
