finished JS structure and wired to buttons

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="calc-container">
             <div class="calc">
                 <div class="main">
-                    <div class="previous">previous</div>
-                    <div class="result">RESULT</div>
+                    <div class="previous"></div>
+                    <div class="result">0</div>
                 </div>
                 <button value="*" class="button operator multiply">X</button>
                 <button value="CE" class="button erase">←</button>
